forth/test/fail/test_const_fold_redundant_divmod_one.af
use' ../../lang.af
fun: test_const_fold_redundant_divmod_one { val -- quo rem } val 1 /mod end
